Add QuotaService definition
