# gen/python/qdrant/cloud/serverless/quota/v1/quota_pb2.py
@@ -1,0 +1,64 @@
+# -*- coding: utf-8 -*-
+# Generated by the protocol buffer compiler.  DO NOT EDIT!
+# NO CHECKED-IN PROTOBUF GENCODE
+# source: qdrant/cloud/serverless/quota/v1/quota.proto
+# Protobuf Python Version: 6.33.5
+"""Generated protocol buffer code."""
+from google.protobuf import descriptor as _descriptor
+from google.protobuf import descriptor_pool as _descriptor_pool
+from google.protobuf import runtime_version as _runtime_version
+from google.protobuf import symbol_database as _symbol_database
+from google.protobuf.internal import builder as _builder
+_runtime_version.ValidateProtobufRuntimeVersion(
+    _runtime_version.Domain.PUBLIC,
+    6,
+    33,
+    5,
+    '',
+    'qdrant/cloud/serverless/quota/v1/quota.proto'
+)
+# @@protoc_insertion_point(imports)
+
+_sym_db = _symbol_database.Default()
+
+
+from buf.validate import validate_pb2 as buf_dot_validate_dot_validate__pb2
+from google.api import annotations_pb2 as google_dot_api_dot_annotations__pb2
+from qdrant.cloud.common.v1 import common_pb2 as qdrant_dot_cloud_dot_common_dot_v1_dot_common__pb2
+
+
+DESCRIPTOR = _descriptor_pool.Default().AddSerializedFile(b'\n,qdrant/cloud/serverless/quota/v1/quota.proto\x12 qdrant.cloud.serverless.quota.v1\x1a\x1b\x62uf/validate/validate.proto\x1a\x1cgoogle/api/annotations.proto\x1a#qdrant/cloud/common/v1/common.proto\";\n\x10GetQuotasRequest\x12\'\n\naccount_id\x18\x01 \x01(\tB\x08\xbaH\x05r\x03\xb0\x01\x01R\taccountId\"\xdc\x02\n\x0c\x41\x63\x63ountQuota\x12\'\n\naccount_id\x18\x01 \x01(\tB\x08\xbaH\x05r\x03\xb0\x01\x01R\taccountId\x12&\n\nmax_spaces\x18\x02 \x01(\x04\x42\x07\xbaH\x04\x32\x02(\x00R\tmaxSpaces\x12\x42\n\x19max_collections_per_space\x18\x03 \x01(\x04\x42\x07\xbaH\x04\x32\x02(\x00R\x16maxCollectionsPerSpace\x12V\n$platform_max_storage_bytes_per_space\x18\x04 \x01(\x04\x42\x07\xbaH\x04\x32\x02(\x00R\x1fplatformMaxStorageBytesPerSpace\x12(\n\x0bused_spaces\x18\x05 \x01(\x04\x42\x07\xbaH\x04\x32\x02(\x00R\nusedSpaces\x12\x35\n\x12used_storage_bytes\x18\x06 \x01(\x04\x42\x07\xbaH\x04\x32\x02(\x00R\x10usedStorageBytes\"Y\n\x11GetQuotasResponse\x12\x44\n\x05quota\x18\x01 \x01(\x0b\x32..qdrant.cloud.serverless.quota.v1.AccountQuotaR\x05quota2\xe0\x01\n\x0cQuotaService\x12\xc7\x01\n\tGetQuotas\x12\x32.qdrant.cloud.serverless.quota.v1.GetQuotasRequest\x1a\x33.qdrant.cloud.serverless.quota.v1.GetQuotasResponse\"Q\x8a\xb5\x18\x16read:serverless_spaces\x82\xd3\xe4\x93\x02\x31\x12//api/serverless/v1/accounts/{account_id}/quotas\x1a\x06\xc2\xb5\x18\x02\x08\x01\x42\xb2\x02\n$com.qdrant.cloud.serverless.quota.v1B\nQuotaProtoP\x01ZYgithub.com/qdrant/qdrant-cloud-public-api/gen/go/qdrant/cloud/serverless/quota/v1;quotav1\xa2\x02\x04QCSQ\xaa\x02 Qdrant.Cloud.Serverless.Quota.V1\xca\x02 Qdrant\\Cloud\\Serverless\\Quota\\V1\xe2\x02,Qdrant\\Cloud\\Serverless\\Quota\\V1\\GPBMetadata\xea\x02$Qdrant::Cloud::Serverless::Quota::V1b\x06proto3')
+
+_globals = globals()
+_builder.BuildMessageAndEnumDescriptors(DESCRIPTOR, _globals)
+_builder.BuildTopDescriptorsAndMessages(DESCRIPTOR, 'qdrant.cloud.serverless.quota.v1.quota_pb2', _globals)
+if not _descriptor._USE_C_DESCRIPTORS:
+  _globals['DESCRIPTOR']._loaded_options = None
+  _globals['DESCRIPTOR']._serialized_options = b'\n$com.qdrant.cloud.serverless.quota.v1B\nQuotaProtoP\001ZYgithub.com/qdrant/qdrant-cloud-public-api/gen/go/qdrant/cloud/serverless/quota/v1;quotav1\242\002\004QCSQ\252\002 Qdrant.Cloud.Serverless.Quota.V1\312\002 Qdrant\\Cloud\\Serverless\\Quota\\V1\342\002,Qdrant\\Cloud\\Serverless\\Quota\\V1\\GPBMetadata\352\002$Qdrant::Cloud::Serverless::Quota::V1'
+  _globals['_GETQUOTASREQUEST'].fields_by_name['account_id']._loaded_options = None
+  _globals['_GETQUOTASREQUEST'].fields_by_name['account_id']._serialized_options = b'\272H\005r\003\260\001\001'
+  _globals['_ACCOUNTQUOTA'].fields_by_name['account_id']._loaded_options = None
+  _globals['_ACCOUNTQUOTA'].fields_by_name['account_id']._serialized_options = b'\272H\005r\003\260\001\001'
+  _globals['_ACCOUNTQUOTA'].fields_by_name['max_spaces']._loaded_options = None
+  _globals['_ACCOUNTQUOTA'].fields_by_name['max_spaces']._serialized_options = b'\272H\0042\002(\000'
+  _globals['_ACCOUNTQUOTA'].fields_by_name['max_collections_per_space']._loaded_options = None
+  _globals['_ACCOUNTQUOTA'].fields_by_name['max_collections_per_space']._serialized_options = b'\272H\0042\002(\000'
+  _globals['_ACCOUNTQUOTA'].fields_by_name['platform_max_storage_bytes_per_space']._loaded_options = None
+  _globals['_ACCOUNTQUOTA'].fields_by_name['platform_max_storage_bytes_per_space']._serialized_options = b'\272H\0042\002(\000'
+  _globals['_ACCOUNTQUOTA'].fields_by_name['used_spaces']._loaded_options = None
+  _globals['_ACCOUNTQUOTA'].fields_by_name['used_spaces']._serialized_options = b'\272H\0042\002(\000'
+  _globals['_ACCOUNTQUOTA'].fields_by_name['used_storage_bytes']._loaded_options = None
+  _globals['_ACCOUNTQUOTA'].fields_by_name['used_storage_bytes']._serialized_options = b'\272H\0042\002(\000'
+  _globals['_QUOTASERVICE']._loaded_options = None
+  _globals['_QUOTASERVICE']._serialized_options = b'\302\265\030\002\010\001'
+  _globals['_QUOTASERVICE'].methods_by_name['GetQuotas']._loaded_options = None
+  _globals['_QUOTASERVICE'].methods_by_name['GetQuotas']._serialized_options = b'\212\265\030\026read:serverless_spaces\202\323\344\223\0021\022//api/serverless/v1/accounts/{account_id}/quotas'
+  _globals['_GETQUOTASREQUEST']._serialized_start=178
+  _globals['_GETQUOTASREQUEST']._serialized_end=237
+  _globals['_ACCOUNTQUOTA']._serialized_start=240
+  _globals['_ACCOUNTQUOTA']._serialized_end=588
+  _globals['_GETQUOTASRESPONSE']._serialized_start=590
+  _globals['_GETQUOTASRESPONSE']._serialized_end=679
+  _globals['_QUOTASERVICE']._serialized_start=682
+  _globals['_QUOTASERVICE']._serialized_end=906
+# @@protoc_insertion_point(module_scope)
